--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Merry Christmas ^^ </title>
-	<link rel="stylesheet" href="CSS/mystyle.css">
+    <title id="titleWeb"></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/mystyle.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<body background="images/bg.jpg" style="width: 100%; height: 100%;">
-	<div class="box">
-		<ul class="minbox">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-		<ol class="maxbox">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ol>
-	</div>
-	<audio id="player" autoplay loop>
+
+<body style="width: 100%; height: 100%;">
+    <div class="box">
+        <ul class="minbox">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ol class="maxbox">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </div>
+    <audio id="player" autoplay loop>
 		<source src="http://vnso-zn-23-tf-mp3-320s1-zmp3.zadn.vn/4007f67ceb3b02655b2a/3100207136674622347?authen=exp=1608429489~acl=/4007f67ceb3b02655b2a/*~hmac=eebe8238a57f13119ec081abe77cf8a2&fs=MTYwODI2MTM1OTMyNXx3ZWJWNQ" type="audio/mp3">
 	</audio>
+    <script src="./js/config.js"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
