--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body style="width: 100%; height: 100%;">
     <div class="box">
         <ul class="minbox">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="min1"></li>
+            <li id="min2"></li>
+            <li id="min3"></li>
+            <li id="min4"></li>
+            <li id="min5"></li>
+            <li id="min6"></li>
         </ul>
         <ol class="maxbox">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="max1"></li>
+            <li id="max2"></li>
+            <li id="max3"></li>
+            <li id="max4"></li>
+            <li id="max5"></li>
+            <li id="max6"></li>
         </ol>
     </div>
     <audio id="player" autoplay loop>
