--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title id="titleWeb"></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/mystyle.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
@@ -31,7 +31,7 @@
     <audio id="player" autoplay loop>
 		<source src="http://vnso-zn-23-tf-mp3-320s1-zmp3.zadn.vn/4007f67ceb3b02655b2a/3100207136674622347?authen=exp=1608429489~acl=/4007f67ceb3b02655b2a/*~hmac=eebe8238a57f13119ec081abe77cf8a2&fs=MTYwODI2MTM1OTMyNXx3ZWJWNQ" type="audio/mp3">
 	</audio>
-    <script src="./js/config.js"></script>
+    <script src="./config.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
